above default cover background

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,19 @@
     <title>Multi Purpose Template</title>
 
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/font-awesome/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <header class="cover">
-        <nav class="navbar navbar-inverse navbar-trans">
+        <nav class="navbar navbar-trans">
             <a class="navbar-brand" href="#">
                 <img src="img/over-solutions-logo.png" width="150" height="50" alt="Logo">
             </a>
             <p class="navbar-text">
-                Lorem ipsum <span class="color-primary">dolor</span> sit amet
+                Lorem ipsum
+                <span class="color-primary">dolor</span> sit amet
             </p>
         </nav>
 
@@ -27,8 +28,8 @@
             <div class="cover-inner container text-center">
                 <div class="col-12">
                     <div class="row">
-                        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                        <p>
+                        <h1 class="cover-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                        <p class="cover-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptates exercitationem voluptatibus veniam! Neque voluptas
                             cupiditate veniam, nam adipisci provident corrupti molestias possimus in quae minus repellat
                             facere nisi consequuntur?
@@ -44,12 +45,34 @@
                             </div>
                         </div>
                     </div>
+                    <br/>
+                    <div class="row">
+                        <div class="col-6">
+                            <a class="cover-link" href="#">
+                                <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
+                                <p>
+                                    <small>Lorem ipsum dolor sit amet.</small>
+                                </p>
+                            </a>
+                        </div>
+                        <div class="col-6">
+                            <a class="cover-link" href="#">
+                                <i class="fa fa-user-o fa-3x" aria-hidden="true"></i>
+                                <p>
+                                    <small>Lorem ipsum.</small>
+                                </p>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
 
     <main>
+        <section class="news">
+
+        </section>
     </main>
 
     <footer>
