--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
             </p>
         </nav>
 
-        <div class="cover-container">
-            <div class="cover-inner container text-center">
+        <div class="cover-container container">
+            <div class="cover-inner text-center">
                 <div class="col-12">
                     <div class="row">
                         <h1 class="cover-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
@@ -36,12 +36,12 @@
                         </p>
                         <div class="col-12">
                             <div class="row">
-                                <a href="#" class="btn btn-primary d-block mx-auto">Lorem ipsum dolor</a>
+                                <a href="#" class="btn btn-cover-primary d-block mx-auto">Lorem ipsum dolor</a>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="row">
-                                <a href="#" class="btn btn-secondary d-block mx-auto">Lorem ipsum</a>
+                                <a href="#" class="btn btn-cover-secondary d-block mx-auto">Lorem ipsum</a>
                             </div>
                         </div>
                     </div>
@@ -71,7 +71,19 @@
 
     <main>
         <section class="news">
-
+            <div class="news-container container">
+                <div class="news-inner">
+                    <div class="row">
+                        <h2 class="news-title display-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
+                        <p class="news-text">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque ullam, libero perferendis velit dolor, sequi voluptatem
+                            autem modi nobis, doloremque officiis? Dolorum alias natus autem! Aliquid commodi delectus laboriosam
+                            nostrum?
+                        </p>
+                        <a class="btn btn-news-primary" href="#">Lorem ipsum</a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
