new imgs, logo and backgrounds

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <header class="cover">
         <nav class="navbar navbar-trans">
             <a class="navbar-brand" href="#">
-                <img src="img/over-solutions-logo.png" width="150" height="50" alt="Logo">
+                <img src="img/logo.png" width="200" height="50" alt="Logo">
             </a>
             <p class="navbar-text">
                 Lorem ipsum
