--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
@@ -88,10 +88,22 @@
     </main>
 
     <footer>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum praesentium, illum ducimus illo deserunt porro debitis quae veniam, dicta voluptate voluptatum eveniet ratione assumenda sed aspernatur voluptas beatae. Non, expedita.</p>
     </footer>
 
+    <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- SmoothScroll JS -->    
+    <!-- build:js vendor/smoothscroll/smoothscroll.min.js -->
+    <script src="vendor/smoothscroll/SmoothScroll.js"></script>
+    <!-- endbuild -->
+
+    <!-- Inline Java-Scripts -->
+    <script inline src="js/smoothscroll-config.js"></script>
 </body>
 
 </html>
