new section products cards

--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,52 @@
                 </div>
             </div>
         </section>
+
+        <section class="products">
+            <div class="products-container container">
+                <div class="products-inner">
+                    <h2 class="products-title display-4">Lorem ipsum</h2>
+                    <div class="row">
+                        
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="img/cyber-security-2765707_640.jpg" alt="Card image cap">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">Lorem ipsum</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veritatis unde laudantium consectetur, deserunt in! Vero, minima? Explicabo beatae placeat numquam.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="img/mobile-phone-1230984_640.jpg" alt="Card image cap">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">Lorem ipsum</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veritatis unde laudantium consectetur, deserunt in! Vero, minima? Explicabo beatae placeat numquam, repudiandae eaque porro quo ad reiciendis. Eos, maxime facere?</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="img/stethoscope-2617700_640.jpg" alt="Card image cap">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">Lorem ipsum</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veritatis unde laudantium consectetur, deserunt in! Vero, minima?</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+
+                </div>                
+
+            </div>
+        </section>
     </main>
 
     <footer>
