--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                     <div class="row">
                         
                         <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card">
                                 <img class="card-img-top" src="img/cyber-security-2765707_640.jpg" alt="Card image cap">
                                 <div class="card-body text-center">
                                     <h5 class="card-title">Lorem ipsum</h5>
@@ -104,7 +104,7 @@
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card">
                                 <img class="card-img-top" src="img/mobile-phone-1230984_640.jpg" alt="Card image cap">
                                 <div class="card-body text-center">
                                     <h5 class="card-title">Lorem ipsum</h5>
@@ -115,7 +115,7 @@
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card">
                                 <img class="card-img-top" src="img/stethoscope-2617700_640.jpg" alt="Card image cap">
                                 <div class="card-body text-center">
                                     <h5 class="card-title">Lorem ipsum</h5>
