Countup section with parallax background

--- a/src/index.html
+++ b/src/index.html
@@ -152,6 +152,22 @@
             </div>
             <!-- /.products-container -->
         </section>
+
+        <section class="countup" data-parallax="scroll" data-image-src="./img/people-using-smartphones.jpg">
+            <div class="countup-container container">
+                <div class="countup-inner">
+                    <h2>Lorem ipsum</h2>
+                    <div class="row">
+                        <div class="col-12">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum reprehenderit odio non nemo unde libero delectus quidem, eveniet
+                                totam perspiciatis. Eum rerum provident ducimus itaque aspernatur odit quibusdam dicta obcaecati.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -163,6 +179,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Parallax JS -->
+    <script src="vendor/parallax/parallax.min.js"></script>
 
     <!-- SmoothScroll JS -->    
     <!-- build:js vendor/smoothscroll/smoothscroll.min.js -->
