--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,9 @@
     <link rel="stylesheet" href="vendor/ekko-lightbox/ekko-lightbox.css">
     <!-- endbuild -->
 
-    <!-- Slick Carousel -->
-    <!-- build:css vendor/slick-carousel/slick.min.css -->
-    <link rel="stylesheet" href="vendor/slick-carousel/slick.css">
-    <link rel="stylesheet" href="vendor/slick-carousel/slick-theme.css">
-    <!-- endbuild -->
+    <!-- Owl Carousel -->
+    <link rel="stylesheet" href="vendor/owl.carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="vendor/owl.carousel/owl.theme.default.min.css">
 
     <!-- App CSS --> 
     <link rel="stylesheet" href="css/app.css">
@@ -334,63 +332,69 @@
 
         <section class="testimonial">
             <div class="container">
-                <div class="col-12">
-                    <div class="row">        
-                        <div class="title-block">
-                            <h2 class="title">Lorem ipsum</h2>
-                            <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                        </div>
-                        <!-- /.title-block -->        
+                <div class="row">
+                    <div class="title-block">
+                        <h2 class="title">Lorem ipsum</h2>
+                        <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
                     </div>
-                    <div class="slider">
-                        <div class="slider-item">
-                            <div class="col-left">
-                                <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
-                                <h4>John Doe</h4>
-                            </div>
-                            <div class="col-right">
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem dignissimos impedit quae amet placeat nobis doloribus,
-                                    perferendis earum quidem beatae. Quos molestias non vel accusamus sit labore nemo dolorem illo.
-                                </p>
-                            </div>
-                        </div>
-        
-                        <div class="slider-item">
-                            <div class="col-left">
-                                <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
-                                <h4>John Doe</h4>
-                            </div>
-                            <div class="col-right">
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem dignissimos impedit quae amet placeat nobis doloribus,
-                                    perferendis earum quidem beatae. Quos molestias non vel accusamus sit labore nemo dolorem illo.
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem dignissimos impedit quae
-                                    amet placeat nobis doloribus, perferendis earum quidem beatae. Quos molestias non vel accusamus
-                                    sit labore nemo dolorem illo.
-                                </p>
-                            </div>
-                        </div>
-        
-                        <div class="slider-item">
-                            <div class="col-left">
-                                <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
-                                <h4>John Doe</h4>
-                            </div>
-                            <div class="col-right">
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem dignissimos impedit quae amet placeat nobis doloribus.
-                                    Quos molestias non vel accusamus sit labore nemo dolorem illo. Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit. Voluptatem dignissimos impedit quae amet placeat nobis doloribus, perferendis
-                                    earum quidem beatae.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- /.title-block -->
                 </div>
-                <!-- /.col -->
+                <!-- /.row -->
+                <div class="owl-carousel owl-theme">
+                    <div class="row justify-content-md-center">
+                        <div class="col-12 col-md-2">
+                            <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
+                            <h4>John Doe</h4>
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-12 col-md-6">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia,
+                                dolore maxime nostrum ea similique, accusamus, autem eum nihil. Repellat, perferendis ea.
+                            </p>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+                    <!-- /.row -->
+                    <div class="row justify-content-md-center">
+                        <div class="col-12 col-md-2">
+                            <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
+                            <h4>John Doe</h4>
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-12 col-md-6">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consectetur quia numquam quae distinctio odio asperiores
+                                nam accusantium officia omnis nesciunt, ipsum explicabo reprehenderit dolor atque, architecto, ratione libero laboriosam!
+                            </p>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+                    <!-- /.row -->
+                    <div class="row justify-content-md-center">
+                        <div class="col-12 col-md-2">
+                            <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
+                            <h4>John Doe</h4>
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-12 col-md-6">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia,
+                                dolore maxime nostrum ea similique, accusamus, autem eum nihil. Repellat, perferendis ea. Lorem
+                                ipsum dolor sit amet consectetur adipisicing elit. Nihil neque praesentium quis dolor nesciunt
+                                obcaecati officia voluptate earum repudiandae architecto unde vitae non consequatur harum, asperiores
+                                aperiam ex facere ab.
+                            </p>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.owl-carousel -->                
             </div>
-        </section>
+            <!-- /.container -->
+        </section>        
     </main>
 
     <footer>
@@ -422,14 +426,14 @@
     <script src="vendor/ekko-lightbox/ekko-lightbox.js"></script>
     <!-- endbuild -->
 
-    <!-- Slick Carousel -->
-    <script src="vendor/slick-carousel/slick.min.js"></script>
+    <!-- Owl Corousel -->
+    <script src="vendor/owl.carousel/owl.carousel.min.js"></script>
 
     <!-- Inline Java-Scripts -->
     <script inline src="js/smoothscroll-config.js"></script>
     <script inline src="js/counterup-config.js"></script>
     <script inline src="js/ekko-lightbox-config.js"></script>
-    <script inline src="js/slick-carousel-config.js"></script>
+    <script inline src="js/owl-carousel-config.js"></script>
 </body>
 
 </html>
