--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
             <!-- /.news-container -->
         </section>
 
-        <section class="products">
+        <section class="services">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-12">
@@ -127,42 +127,21 @@
                 <!-- /.row -->                    
                 <div class="row">                        
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="card">
-                            <img class="card-img-top" src="img/smartphone-protection.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Lorem ipsum</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veritatis unde laudantium consectetur, deserunt in! Vero, minima? Explicabo beatae placeat numquam.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                            <!-- /.card-body -->
-                        </div>
-                        <!-- /.card -->
+                        <i class="fa fa-paint-brush fa-5x" aria-hidden="true"></i>
+                        <h4>Lorem ipsum dolor</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
                     </div>
                     <!-- /.col -->
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="card">
-                            <img class="card-img-top" src="img/smartphone-broken-screen.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Lorem ipsum</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veritatis unde laudantium consectetur, deserunt in! Vero, minima? Explicabo beatae placeat numquam, repudiandae eaque porro quo ad reiciendis. Eos, maxime facere?</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                            <!-- /.card-body -->
-                        </div>
-                        <!-- /.card -->
+                        <i class="fa fa-code fa-5x" aria-hidden="true"></i>
+                        <h4>Lorem ipsum dolor</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
                     </div>
                     <!-- /.col -->
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="card">
-                            <img class="card-img-top" src="img/smartphone-stethoscope.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Lorem ipsum</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veritatis unde laudantium consectetur, deserunt in! Vero, minima?</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                            <!-- /.card-body -->
-                        </div>
-                        <!-- /.card -->
+                        <i class="fa fa-bar-chart fa-5x" aria-hidden="true"></i>
+                        <h4>Lorem ipsum dolor</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
                     </div>
                     <!-- /.col -->
                 </div>
@@ -394,7 +373,17 @@
                 <!-- /.owl-carousel -->                
             </div>
             <!-- /.container -->
-        </section>        
+        </section>
+
+        <section class="blog"></section>
+
+        <section class="calltoaction"></section>
+
+        <section class="fag"></section>
+
+        <section class="contact"></section>
+
+        <section class="newsletter"></section>
     </main>
 
     <footer>
