--- a/src/index.html
+++ b/src/index.html
@@ -150,6 +150,61 @@
             <!-- /.container -->
         </section>
 
+        <section class="features">
+            <div class="container">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="feature">
+                            <img class="feature-image rounded-circle img-fluid pull-right" src="img/smartphone-broken-screen.jpg">
+                            <h2 class="title color-primary feature-heading">Lorem ipsum dolor
+                                <span class="text-muted">sit amet, consecteturadipisicing</span>
+                            </h2>
+                            <p class="lead">
+                                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus
+                                magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Donec ullamcorper nulla non metus auctor fringilla.
+                                Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+                            </p>
+                        </div>
+                        <!-- /.feature -->
+                    </div>
+                    <!-- /.row -->
+                    <div class="row">
+                        <div class="feature">
+                            <img class="feature-image rounded-circle img-fluid pull-left" src="img/smartphone-protection.jpg">
+                            <h2 class="title color-primary feature-heading">Lorem ipsum dolor
+                                    <span class="text-muted">sit amet, consecteturadipisicing</span>
+                            </h2>
+                            <p class="lead">
+                                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus
+                                magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+                                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. 
+                            </p>
+                        </div>
+                        <!-- /.feature -->
+                    </div>
+                    <!-- /.row -->
+                    <div class="row">
+                        <div class="feature">
+                            <img class="feature-image rounded-circle img-fluid pull-right" src="img/smartphone-stethoscope.jpg">
+                            <h2 class="title color-primary feature-heading">Lorem ipsum dolor
+                                    <span class="text-muted">sit amet, consecteturadipisicing</span>
+                            </h2>
+                            <p class="lead">
+                                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus
+                                magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, pariatur fugiat illum natus explicabo laboriosam repellat eaque 
+                                voluptas impedit a facere exercitationem nam suscipit nostrum expedita minima, dolorem et iste!
+                            </p>
+                        </div>
+                        <!-- /.feature -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.container -->
+        </section>
+
         <section class="countup" data-parallax="scroll" data-image-src="./img/people-using-smartphones.jpg">
             <div class="container text-center">
                 <div class="row">
